--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "b7ba0ed9-2024-40e8-bf01-ce8292431e52"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
